--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ window.onload = function(){
       //Creo una imagen conun objeto Image de Javascript
       var img = new Image();
       //indico la URL de la imagen
-      img.src = 'img/disneygold.png';
+      img.src = 'disneygold.png';
       //defino el evento onload del objeto imagen
       img.onload = function(){
          //incluyo la imagen en el canvas
@@ -61,7 +61,7 @@ Tu navegador no soporta canvas.
 </div>
 <div id="audio" style="display:none;position:absolute;bottom:0.2em;margin:auto;">
 <audio id="myAudio">
-  <source src="music/disney-music.mp3" type="audio/mpeg">
+  <source src="disney-music.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 </div>
