--- a/index.html
+++ b/index.html
@@ -4,23 +4,18 @@
 	<title>Test SDK Analytics</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
-	<link href='css/styles.css' rel='stylesheet' type='text/css'>
-	
-	<script   src="https://code.jquery.com/jquery-1.12.4.min.js"   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="   crossorigin="anonymous"></script>
-	<script src="js/functions.js"></script>
+	<link href='styles.css' rel='stylesheet' type='text/css'>	
+	<script src="jquery.js"></script>
 	
 	<!-- Google Analytics -->
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	  })(window,document,'script','analytics.js','ga');
 
 	  ga('create', 'UA-79007399-2', 'auto');
-	  /*ga('send', 'pageview');*/
-	  ga('send', 'event', '#button-img', 'click', '#button-showImage');
-	  ga('send', 'event', '#button-play-music', 'click', '#button-Play-Music');
-	  ga('send', 'event', '#button-pause-music', 'click', '#button-Pause-Music');
+	  ga('send', 'pageview');
 	</script>
 	<!-- End Google Analytics -->
 
@@ -30,8 +25,8 @@
 	<div id="wrapper">
 		<h1>Test SDK Disney</h1>
 		<button id="button-img">Show Image</button>
-		<button onclick="playAudio()" type="button">Play Music</button>
-		<button onclick="pauseAudio()" type="button">Pause Music</button>
+		<button id="button-play-music" onclick="playAudio()" type="button">Play Music</button>
+		<button id="button-pause-music" onclick="pauseAudio()" type="button">Pause Music</button>
 
 		<div id="body-canvas">
 		<canvas id="canvas" width="260" height="300">
@@ -40,20 +35,58 @@
 		</div>
 		<div id="audio">
 		<audio id="myAudio">
-		  <source src="music/disney-music.mp3" type="audio/mpeg">
+		  <source src="disney-music.mp3" type="audio/mpeg">
 		Your browser does not support the audio element.
 		</audio>
 		</div>
 	</div>
-	
 <script>
+function cargaContextoCanvas(idCanvas){
+   var elemento = document.getElementById(idCanvas);
+   if(elemento && elemento.getContext){
+      var contexto = elemento.getContext('2d');
+      if(contexto){
+         return contexto;
+      }
+   }
+   return FALSE;
+}
+
+
+window.onload = function(){
+   //Recibimos el elemento canvas
+   var ctx = cargaContextoCanvas('canvas');
+   if(ctx){
+      //Creo una imagen conun objeto Image de Javascript
+      var img = new Image();
+      //indico la URL de la imagen
+      img.src = 'disneygold.png';
+      //defino el evento onload del objeto imagen
+      img.onload = function(){
+         //incluyo la imagen en el canvas
+         ctx.drawImage(img, 10, 10);
+      }
+   }
+}
+
+$(document).ready(function(){
+
+	$('#button-img').click(function(){
+	ga('send', 'event', '#button-img', 'click', 'Show Image Phone Gap');
+	$('#body-canvas').slideToggle();
+	});
+
+});
+
 	var x = document.getElementById("myAudio"); 
 
-	function playAudio() { 
+	function playAudio() {
+		ga('send', 'event', '#button-play-music', 'click', 'Play Music Phone Gap');	
 		x.play(); 
 	} 
 
 	function pauseAudio() { 
+		ga('send', 'event', '#button-pause-music', 'click', 'Pause Music Phone Gap');
 		x.pause(); 
 	} 
 </script>
